docs: backlog — stay on JDK 25 with --enable-preview until 29 LTS (owner ruling)
Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>